cap04/cap04-clusterip-mess.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service-mess
spec:
  selector:
    app: myapp
  ports:
    - port: 80
