cap04/cap04-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cap04-clusterip
spec:
  type: ClusterIP
  selector:
    app: myapp
    ver: "1"
  ports:
    - port: 80
      targetPort: 8080
