cap04/cap04-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: servicio-sin-selector
subsets:
  - addresses:
      - ip: 10.244.1.92
    ports:
      - port: 8080
