cap04/cap04-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-cyberhades
spec:
  type: ExternalName
  externalName: cyberhades.com
