cap04/cap04-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: myapp
    ver: "nodeport"
  ports:
  - targetPort: 8080
    port: 80
    protocol: TCP
