cap04/cap04-servicio-sin-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-sin-selector
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
