cap04/cap04-ingress-6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cap04-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: servicio-v2
      port:
        number: 80
  rules:
    - host: v1.ingress-test.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicio-v1
                port:
                  number: 80
